<!--
  ~   Copyright 2020 Daniel Waiguru
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">Notebook</string>
    <string name="_8942">⋮</string>
    <string name="search_notes">Search a note</string>
    <string name="my_notes">My Notes</string>
    <string name="note_hint">My Note</string>
    <string name="title_hint">My Note Title</string>
    <string name="date_hint">Date</string>
    <string name="enter_note_title">Enter note title</string>
    <string name="type_a_note">Type a note…</string>
    <string name="navigate_back">Navigate Back</string>
    <string name="delete">Delete</string>
    <string name="no_notes">No Note Available, Add Some</string>
    <string name="fab_description">Add a new note</string>
    <string name="save">Save</string>
    <string name="toggle_light_and_night_mode">Toggle light and night mode</string>
    <string name="title_vault">Vault</string>
</resources>