<?xml version="1.0" encoding="utf-8"?>
<!--
  ~   Copyright 2020 Daniel Waiguru
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.note.NoteActivity"
    >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/lobster_two"
        android:text="@string/my_notes"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageButton
        android:id="@+id/toggleNight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_8sdp"
        android:padding="@dimen/_5sdp"
        android:background="@drawable/circle_button"
        android:layout_marginEnd="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/toggle_light_and_night_mode"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_create"
        app:tint="@color/textColor"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/_18sdp"
        android:contentDescription="@string/fab_description" />
    <com.google.android.material.card.MaterialCardView
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/card"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_13sdp"
        android:paddingStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_13sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center_vertical"
            android:focusableInTouchMode="true"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"

            >
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_search"
                android:layout_marginStart="@dimen/_8sdp"
                android:contentDescription="@string/app_name"
                app:tint="@color/colorAccent" />
            <EditText
                android:id="@+id/searchNote"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:hint="@string/search_notes"
                android:layout_marginStart="@dimen/_7sdp"
                android:background="@null"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textSize="@dimen/_16ssp"
                android:textColorHint="@color/colorHint"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card"
        android:layout_marginTop="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_marginEnd="@dimen/_13sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_5sdp"
        />
    <TextView
        android:id="@+id/noNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="@color/textColor"
        android:text="@string/no_notes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <LinearLayout
        android:id="@+id/noNoteLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/ic_undraw_no_note"
            android:contentDescription="@string/app_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:visibility="visible"
            android:textColor="@color/textColor"
            android:text="@string/no_notes"

            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>